--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.3",
+    "socket.io": "^4.5.4",
     "validator": "^13.7.0"
   }
 }
