--- a/backend/package.json
+++ b/backend/package.json
@@ -4,19 +4,20 @@
   "description": "",
   "main": "expressServer.js",
   "scripts": {
-    "test": "nodemon expressServer.js",
-    "start": "node expressServer.js"
+    "test": "nodemon app.js",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^18.11.18",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.7.3",
     "socket.io": "^4.5.4",
     "validator": "^13.7.0"
