--- a/typescript-version/package.json
+++ b/typescript-version/package.json
@@ -2,16 +2,16 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "../expressServer.js",
   "scripts": {
     "build": "tsc",
     "test": "tsc -w",
-    "start": "ts-node src/main.ts"
+    "start": "node ./build/main.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
