--- a/typescript-version/package.json
+++ b/typescript-version/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.15",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.18",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
