--- a/typescript-version/package.json
+++ b/typescript-version/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.18",
     "@types/validator": "^13.7.10",
