--- a/typescript-version/package.json
+++ b/typescript-version/package.json
@@ -3,21 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "nodemon ./build/main.js",
-    "build": "tsc",
-    "test": "tsc -w",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon build/main.js\"",
+    "build": "npx tsc --watch",
     "start": "node  ./build/main.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.15",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/mongoose": "^5.11.97",
-    "@types/node": "^18.11.18",
-    "@types/validator": "^13.7.10",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -28,5 +21,16 @@
     "socket.io": "^4.5.4",
     "ts-node": "^10.9.1",
     "validator": "^13.7.0"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^18.15.11",
+    "@types/validator": "^13.7.10",
+    "concurrently": "^8.0.1",
+    "nodemon": "^2.0.22",
+    "typescript": "^5.0.4"
   }
 }
